tests/integration/snapshots/integration__install__cross_realm_dependency.snap
---
source: tests/integration/install.rs
expression: result

---
ServerPackages:
  _Index:
    biff_minimal-shared@0.1.0:
      minimal-shared:
        default.project.json: "{\n  \"name\": \"minimal-shared\",\n  \"tree\": {\n    \"$path\": \"src\"\n  }\n}"
        src:
          init.lua: "return \"hey\""
        rbxpm.toml: "[package]\nname = \"biff/minimal-shared\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"shared\"\nregistry = \"test-registries/primary-registry\"\n"
    biff_server-depends-on-shared@0.1.0:
      Minimal.lua: "return require(script.Parent.Parent[\"biff_minimal-shared@0.1.0\"][\"minimal-shared\"])\n"
      server-depends-on-shared:
        default.project.json: "{\n  \"name\": \"server-depends-on-shared\",\n  \"tree\": {\n    \"$path\": \"src\"\n  }\n}"
        src:
          init.lua: "local Minimal = require(script.Parent.Minimal)\n\nreturn function()\n\tprint(Minimal)\nend"
        rbxpm.toml: "[package]\nname = \"biff/server-depends-on-shared\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n\n[dependencies]\nMinimal = \"biff/minimal-shared@0.1.0\"\n"
  sdos.lua: "return require(script.Parent._Index[\"biff_server-depends-on-shared@0.1.0\"][\"server-depends-on-shared\"])\n"
default.project.json: "{\n\t\"name\": \"cross-realm-dependency\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
src:
  init.lua: "local sdos = require(script.Parent.sdos)\n\nreturn function()\n\tprint(\"howdy\")\n\tsdos()\nend\n"
rbxpm.lock: "# This file is automatically @generated by rbxpm.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/cross-realm-dependency\"\nversion = \"0.1.0\"\ndependencies = [[\"sdos\", \"biff/server-depends-on-shared@0.1.0\"]]\n\n[[package]]\nname = \"biff/minimal-shared\"\nversion = \"0.1.0\"\ndependencies = []\n\n[[package]]\nname = \"biff/server-depends-on-shared\"\nversion = \"0.1.0\"\ndependencies = [[\"Minimal\", \"biff/minimal-shared@0.1.0\"]]\n"
rbxpm.toml: "[package]\nname = \"biff/cross-realm-dependency\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"shared\"\nregistry = \"test-registries/primary-registry\"\n\n[place]\nshared-packages = \"game.ReplicatedStorage.Packages\"\n\n[server-dependencies]\nsdos = \"biff/server-depends-on-shared@0.1.0\"\n"

