tests/integration/snapshots/integration__install__minimal.snap
---
source: tests/integration/install.rs
expression: result
---
default.project.json: "{\r\n\t\"name\": \"minimal\",\r\n\t\"tree\": {\r\n\t\t\"$path\": \"src\"\r\n\t}\r\n}"
rbxpm.lock: "# This file is automatically @generated by rbxpm.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\ndependencies = []\n"
rbxpm.toml: "[package]\r\nname = \"biff/minimal\"\r\nversion = \"0.1.0\"\r\nlicense = \"MIT\"\r\nrealm = \"server\"\r\nregistry = \"test-registries/primary-registry\"\r\n"
src:
  init.lua: "return \"hey\""

