tests/integration/snapshots/integration__install__private_with_public_dependency.snap
---
source: tests/integration/install.rs
expression: result
---
ServerPackages:
  Minimal.lua: "return require(script.Parent._Index[\"biff_minimal@0.1.0\"][\"minimal\"])\n"
  _Index:
    biff_minimal@0.1.0:
      minimal:
        init.lua: "return \"hey\""
default.project.json: "{\n\t\"name\": \"private-with-public-dependency\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
rbxpm.lock: "# This file is automatically @generated by rbxpm.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\ndependencies = []\n\n[[package]]\nname = \"private/private-with-public-dependency\"\nversion = \"0.1.0\"\ndependencies = [[\"Minimal\", \"biff/minimal@0.1.0\"]]\n"
rbxpm.toml: "[package]\nname = \"private/private-with-public-dependency\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/tertiary-registry\"\n\n[server-dependencies]\nMinimal = \"biff/minimal@0.1.0\""
src:
  init.lua: "return \"I'm private\""

