tests/integration/snapshots/integration__install__transitive_dependency.snap
---
source: tests/integration/install.rs
expression: result
---
ServerPackages:
  OneDependency.lua: "return require(script.Parent._Index[\"biff_one-dependency@0.1.0\"][\"one-dependency\"])\n"
  _Index:
    biff_minimal@0.1.0:
      minimal:
        init.lua: "return \"hey\""
    biff_one-dependency@0.1.0:
      Minimal.lua: "return require(script.Parent.Parent[\"biff_minimal@0.1.0\"][\"minimal\"])\n"
      one-dependency:
        init.lua: "return \"hey\""
default.project.json: "{\r\n\t\"name\": \"transitive-dependency\",\r\n\t\"tree\": {\r\n\t\t\"$path\": \"src\"\r\n\t}\r\n}"
rbxpm.lock: "# This file is automatically @generated by rbxpm.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\ndependencies = []\n\n[[package]]\nname = \"biff/one-dependency\"\nversion = \"0.1.0\"\ndependencies = [[\"Minimal\", \"biff/minimal@0.1.0\"]]\n\n[[package]]\nname = \"biff/transitive-dependency\"\nversion = \"0.1.0\"\ndependencies = [[\"OneDependency\", \"biff/one-dependency@0.1.0\"]]\n"
rbxpm.toml: "[package]\r\nname = \"biff/transitive-dependency\"\r\nversion = \"0.1.0\"\r\nlicense = \"MIT\"\r\nrealm = \"server\"\r\nregistry = \"test-registries/primary-registry\"\r\n\r\n[server-dependencies]\r\nOneDependency = \"biff/one-dependency@0.1.0\"\r\n"
src:
  init.lua: "local OneDependency = require(script.Parent.OneDependency)\r\n\r\nreturn function()\r\n\treturn OneDependency()\r\nend"

